Menambahkan endpoint GET untuk admin, serta menambahkan middleware untuk kemanan JWT
